--- a/Movie/Base.lproj/LaunchScreen.storyboard
+++ b/Movie/Base.lproj/LaunchScreen.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="3PA-Oc-78A">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchPhoto" translatesAutoresizingMaskIntoConstraints="NO" id="3PA-Oc-78A">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wGk-7d-3qG">
@@ -31,14 +31,12 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="3PA-Oc-78A" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="8W5-K4-mno"/>
-                            <constraint firstItem="3PA-Oc-78A" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="9Jk-gy-fBp"/>
-                            <constraint firstItem="3PA-Oc-78A" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="EKy-SG-C1J"/>
-                            <constraint firstAttribute="trailing" secondItem="3PA-Oc-78A" secondAttribute="trailing" id="Ukg-j9-M4G"/>
+                            <constraint firstAttribute="bottom" secondItem="3PA-Oc-78A" secondAttribute="bottom" id="0iT-pb-rOl"/>
+                            <constraint firstItem="3PA-Oc-78A" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5Ao-Nk-cCP"/>
+                            <constraint firstItem="3PA-Oc-78A" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="GYq-4S-pmW"/>
                             <constraint firstItem="wGk-7d-3qG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Y18-sp-41s"/>
-                            <constraint firstAttribute="bottom" secondItem="3PA-Oc-78A" secondAttribute="bottom" id="q9A-ud-F90"/>
+                            <constraint firstAttribute="trailing" secondItem="3PA-Oc-78A" secondAttribute="trailing" id="cic-rH-QkH"/>
                             <constraint firstItem="wGk-7d-3qG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="qMf-sS-Zuf"/>
-                            <constraint firstItem="3PA-Oc-78A" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="s8o-ch-lGQ"/>
                         </constraints>
                     </view>
                 </viewController>
